<resources>
    <string name="app_name">Okay SDK demo</string>
    <string name="enroll_success">Enrollment successful</string>
    <string name="enroll_error">Enrollment error. Status: %1$s Message: %2$s</string>
    <string name="btn_start_enroll">Start enroll</string>
    <string name="already_enrolled">Already enrolled</string>
    <string name="welcome_to_okay_sdk_demo_app">Welcome to Okay SDK demo app</string>
    <string name="link_demo_tenant">Link demo tenant</string>
    <string name="start_login_flow">Start login flow</string>
    <string name="e_commerce_transaction">E-COMMERCE transaction</string>
    <string name="payment_card_transaction">Payment card transaction</string>
    <string name="remittance_transaction">Remittance transaction</string>
    <string name="auth_success">Transaction authorization SUCCESS</string>
    <string name="auth_error">Transaction authorization error</string>
    <string name="application_enrolled">Application enrolled</string>
    <string name="application_not_enrolled">Application not enrolled</string>
    <string name="reset_enroll">reset enroll</string>
    <string name="link_tenant">Link tenant</string>
    <string name="tenant_linking_successful">Tenant linking successful. Tenant name: %s</string>
    <string name="hint_linking_code">Linking code</string>
    <string name="btn_is_enrolled">is Enrolled</string>
</resources>
