<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <Button
            android:id="@+id/btnECommerceTransaction"
            style="@style/MainButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:onClick="@{(view) -> viewModel.startECommerceTransaction()}"
            android:text="@string/e_commerce_transaction"
            app:layout_constraintBottom_toTopOf="@+id/btnRemittanceTransaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStartEnroll" />

        <Button
            android:id="@+id/btnRemittanceTransaction"
            style="@style/MainButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:onClick="@{(view) -> viewModel.startRemittanceTransaction()}"
            android:text="@string/remittance_transaction"
            app:layout_constraintBottom_toTopOf="@+id/btnCardTransaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnECommerceTransaction" />

        <Button
            android:id="@+id/btnStartEnroll"
            style="@style/MainButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/btn_start_enroll"
            app:layout_constraintBottom_toTopOf="@+id/btnECommerceTransaction"
            app:layout_constraintEnd_toStartOf="@+id/twEnrollStatus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/twWelcome" />

        <Button
            android:id="@+id/btnCardTransaction"
            style="@style/MainButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/payment_card_transaction"
            android:onClick="@{(view) -> viewModel.startPaymentCardTransaction()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRemittanceTransaction" />

        <CheckedTextView
            android:id="@+id/twEnrollStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkMark="@drawable/ic_check_green_24dp"
            android:checked="@{safeUnbox(viewModel.isEnrolled())}"
            android:text="@string/application_enrolled"
            app:layout_constraintBottom_toBottomOf="@+id/btnStartEnroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnStartEnroll"
            app:layout_constraintTop_toTopOf="@+id/btnStartEnroll" />

        <TextView
            android:id="@+id/twWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/welcome_to_okay_sdk_demo_app"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toTopOf="@+id/btnStartEnroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewModel"
            type="com.itransition.okay.sdkdemo.ui.main.MainViewModel" />
    </data>

</layout>

